update posts view: add feature to create post instance

--- a/fastblog/posts/templates/posts/list.html
+++ b/fastblog/posts/templates/posts/list.html
@@ -6,3 +6,12 @@
     <li>{{ post.title }}</li>
   {% endfor %}
 </ul>
+
+
+<form action="{% url 'posts' %}" method="post">
+  {% csrf_token %}
+  <input type="text" name="title" />
+  <textarea name="content"></textarea>
+
+  <input type="submit" />
+</form>
