update templates: refactor template via extends, include

--- a/fastblog/fastblog/templates/home.html
+++ b/fastblog/fastblog/templates/home.html
@@ -1,2 +1,9 @@
-<h1>Home</h1>
-<p>This is fastblog home page.</p>
+{% extends "base.html" %}
+
+
+{% block title %}메인 페이지 | 패스트블로그{% endblock %}
+
+{% block content %}
+  <h1>Home</h1>
+  <p>This is fastblog home page.</p>
+{% endblock %}
