--- a/fastblog/posts/templates/posts/detail.html
+++ b/fastblog/posts/templates/posts/detail.html
@@ -1,2 +1,9 @@
-<h1>{{ post.title }}</h1>
-<p>{{ post.content }}</p>
+{% extends "base.html" %}
+
+
+{% block title %}{{ post.title }} | 패스트블로그{% endblock %}
+
+{% block content %}
+  <h1>{{ post.title }}</h1>
+  <p>{{ post.content }}</p>
+{% endblock %}
