--- a/fastblog/posts/templates/posts/detail.html
+++ b/fastblog/posts/templates/posts/detail.html
@@ -15,4 +15,10 @@
     </li>
     {% endfor %}
   </ul>
+
+  <form action="/posts/{{ post.id }}/comments/" method="post">
+    {% csrf_token %}
+    <input type="text" name="content">
+    <input type="submit">
+  </form>
 {% endblock %}
