--- a/fastblog/fastblog/templates/base.html
+++ b/fastblog/fastblog/templates/base.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     {% include "partials/header.html" %}
+    {% include "partials/messages.html" %}
 
     {% block content %}
     {% endblock %}
