--- a/fastblog/posts/templates/posts/detail.html
+++ b/fastblog/posts/templates/posts/detail.html
@@ -11,7 +11,7 @@
   <ul>
     {% for comment in post.comment_set.all %}
     <li id="comment_{{ comment.id }}">
-      {{ comment.content }}
+      {{ comment.content }} by @{{ comment.user.username }}
     </li>
     {% endfor %}
   </ul>
