--- a/fastblog/fastblog/templates/base.html
+++ b/fastblog/fastblog/templates/base.html
@@ -1,8 +1,10 @@
+{% load staticfiles %}
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <title>{% block title %}{% endblock %}</title>
+    <link rel="stylesheet" href="{% static "css/application.css" %}" type="text/css">
   </head>
   <body>
     {% include "partials/header.html" %}
