--- a/fastblog/fastblog/templates/base.html
+++ b/fastblog/fastblog/templates/base.html
@@ -14,5 +14,8 @@
     {% endblock %}
 
     {% include "partials/footer.html" %}
+    <script src="https://code.jquery.com/jquery-2.2.2.min.js" integrity="sha256-36cp2Co+/62rEAAYHLmRCPIych47CvdM+uTBJwSzWjI=" crossorigin="anonymous"></script>
+    <script src="{% static "js/application.js" %}"></script>
+    {% block custom_script %}{% endblock %}
   </body>
 </html>
