--- a/fastblog/posts/templates/posts/detail.html
+++ b/fastblog/posts/templates/posts/detail.html
@@ -8,7 +8,7 @@
   <h1>{{ post.title }}</h1>
   <p>{{ post.content }}</p>
 
-  <h2>All Comments</h2>
+  <h2>All Comments  <i id="comments-spinner" class="fa fa-spinner fa-spin"></i></h2>
   <ul id="comments" data-post-id={{ post.id }}>
   </ul>
 
